--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@
 asgiref==3.7.2; python_version >= '3.7'
 django==5.0.3; python_version >= '3.10'
 djangorestframework==3.14.0; python_version >= '3.6'
+pillow==10.2.0; python_version >= '3.8'
 pytz==2024.1
 sqlparse==0.4.4; python_version >= '3.5'
